# ModernOPC

./: .clang-format  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  AppTypes.cpp  CMakeLists.txt  FileServiceProvider.h  MyDataSource.h  codecov.yml  conanfile.txt  conversion.h  function.cpp  main.cpp  modernOpcConfig.cmake  modernopcConfig.cmake  runLcov.sh  statemachine.cpp  test.cpp  travis_script.sh
.github/workflows/: GccDebugMemcheck.yml  main.yml
TypeGenerator/: CMakeLists.txt  ConversionFrom.h  DataType.h  NodeId.cpp  NodeId.h  TypeGenerator.h  backend.cpp  backend.h  conversion.h  main.cpp
TypeGenerator/types/: BaseDataType.cpp  DataType.h  EnumDataType.cpp  EnumDataType.h
benchmarks/: CMakeLists.txt  dataSource.cpp  method.cpp  readWrite.cpp  variant.cpp
docs/: CMakeLists.txt  Doxyfile.in  Readme.md  building.rst  conf.py  index.rst  tutorial_nodeset.rst  tutorials.rst
docs/tutorials/: methods.rst  nodeset.rst  variables.rst
models/: serviceobject.xml
modernOpc/include/modernOpc/: BrowseResult.h  DataSource.h  DataType.h  OpcException.h  Server.h  UnresolvedNodeId.h  VariableAttributes.h  Variant.h  util.h
modernOpc/include/modernOpc/client/: Client.h
modernOpc/include/modernOpc/events/: BaseEventType.h
modernOpc/include/modernOpc/methods/: Method.h  MethodWrapper.h  TupleHelper.h
modernOpc/include/modernOpc/nodes/: MethodNode.h  Node.h  ObjectNode.h  VariableNode.h
modernOpc/include/modernOpc/types/: LocalizedText.h  NodeId.h  QualifiedName.h  String.h
modernOpc/include/opc/: util.h
modernOpc/include/opc/types/: NodeId.h
modernOpc/src/: Server.cpp  Variant.cpp  Variant_get.cpp
modernOpc/src/client/: Client.cpp
modernOpc/src/nodes/: Node.cpp  ObjectNode.cpp  VariableNode.cpp
modernOpc/src/types/: LocalizedText.cpp  NodeId.cpp  QualifiedName.cpp  String.cpp
modernopc/include/modernopc/: BrowseResult.h  DataSource.h  DataType.h  Logger.h  Server.h  StatusCode.h  VariableAttributes.h  Variant.h
modernopc/include/modernopc/client/: Client.h  Subscription.h
modernopc/include/modernopc/events/: BaseEventType.h
modernopc/include/modernopc/methods/: Method.h  MethodWrapper.h  Result.h
modernopc/include/modernopc/nodes/: MethodNode.h  Node.h  ObjectNode.h  VariableNode.h
modernopc/include/modernopc/types/: LocalizedText.h  NodeId.h  QualifiedName.h
modernopc/src/: Server.cpp  Variant.cpp  Variant_fromJson.cpp  Variant_get.cpp
modernopc/src/client/: Client.cpp  ClientJson.cpp
modernopc/src/import/: Extension.cpp  Extension.h
modernopc/src/nodes/: Node.cpp  ObjectNode.cpp  VariableNode.cpp
modernopc/src/types/: LocalizedText.cpp  NodeId.cpp  QualifiedName.cpp  String.cpp
tests/: CMakeLists.txt  Conversion.cpp  TypeConverter.cpp  client.cpp  clientJson.cpp  dataSource.cpp  events.cpp  methods.cpp  nodeId.cpp  object.cpp  server.cpp  server2.cpp  statusCode.cpp  struct.xml  test_variant.cpp  variant.cpp  variant_fromJson.cpp  variant_isa.cpp
tests/import/: CMakeLists.txt  Displayname.xml  basicNodeClassTest.xml  import.cpp  importAttributes.cpp  importBase.cpp  importConversion.cpp  importExtensions.cpp  importReferences.cpp  importTests.cpp  importValueRank.cpp  importValues.cpp  importreferences.xml  primitivevalues.xml  test.cpp  valuerank.xml  valuesWithUnknownDataType.xml
tutorial/: CMakeLists.txt  FileService.cpp  FileService.h  main.cpp
tutorial/customTypes/: AppTypes.h  CMakeLists.txt  main.cpp
tutorial/serviceObject/: CMakeLists.txt  main.cpp
tutorials/: CMakeLists.txt
tutorials/client/: CMakeLists.txt  client.cpp
tutorials/customTypes/: AppTypes.cpp  AppTypes.h  CMakeLists.txt  main.cpp
tutorials/events/: CMakeLists.txt  events.cpp
tutorials/methods/: CMakeLists.txt  methods.cpp
tutorials/nodesets/: CMakeLists.txt  nodeset.cpp
tutorials/serviceObject/: CMakeLists.txt  FileService.cpp  FileService.h  main.cpp
tutorials/variables/: CMakeLists.txt  MyDataSource.h  main.cpp
wrapper/: DataSource.cpp  DataSource.h  Method.hpp  MethodWrapper.h  NodeId.h  Server.cpp  Server.h  TypeConverter.cpp  TypeConverter.h  Variant.cpp  Variant.h  quickstart.cpp  test_variant.cpp  tuple_getruntime.h
wrapper/include/: BaseEventType.h  DataSource.h  Method.h  Method.hpp  MethodWrapper.h  NodeId.h  NodeInfo.h  NodeMetaInfo.h  Server.h  TypeConverter.h  Types.h  Variant.h
wrapper/include/opc/: Conversion.h  DataSource.h  DataType.h  Exception.h  Logger.h  NodeMetaInfo.h  OpcException.h  Server.h  Types.h  UnresolvedNodeId.h  VariableAttributes.h  Variant.h  util.h
wrapper/include/opc/client/: Client.h
wrapper/include/opc/events/: BaseEventType.h
wrapper/include/opc/methods/: Method.h  MethodWrapper.h
wrapper/include/opc/nodes/: MethodNode.h  Node.h  ObjectNode.h  VariableNode.h
wrapper/include/opc/types/: LocalizedText.h  NodeId.h  QualifiedName.h  StdTypes.h  String.h  Types.h
wrapper/src/: Conversion.cpp  DataType.cpp  ObjectType.h  Server.cpp  TypeConverter.cpp  Variant.cpp  Variant_get.cpp  Variant_is_a.cpp  Variant_set.cpp  conversion.h  import.cpp  import.h  value.cpp  value.h
wrapper/src/client/: Client.cpp
wrapper/src/import/: Extension.cpp  Extension.h  conversion.h  import.cpp  import.h  value.cpp  value.h
wrapper/src/nodes/: Node.cpp  ObjectNode.cpp  VariableNode.cpp
wrapper/src/types/: LocalizedText.cpp  NodeId.cpp  QualifiedName.cpp  StdTypes.cpp  String.cpp  Types.cpp
