macro(opc_add_benchmark arg)
    add_executable(${arg}_benchmark ${arg}.cpp)
    target_compile_options(${arg}_benchmark PRIVATE ${COMPILER_OPTIONS})
    target_compile_features(${arg}_benchmark PRIVATE cxx_std_17)
    target_link_libraries(${arg}_benchmark PRIVATE ${LIB_ASAN} ${LIB_GCOV} wrapper CONAN_PKG::benchmark open62541)
endmacro()

opc_add_benchmark("variant")
opc_add_benchmark("method")
opc_add_benchmark("readWrite")
opc_add_benchmark("dataSource")