macro(opc_add_benchmark arg)
    add_executable(${arg}_benchmark ${arg}.cpp)
    target_compile_options(${arg}_benchmark PRIVATE ${COMPILER_OPTIONS})
    target_compile_features(${arg}_benchmark PRIVATE cxx_std_17)
    target_link_libraries(${arg}_benchmark PRIVATE ${LIB_GCOV} modernopc CONAN_PKG::benchmark)
endmacro()

opc_add_benchmark("variant")
opc_add_benchmark("method")
opc_add_benchmark("readWrite")
opc_add_benchmark("dataSource")