add_subdirectory(import)

add_executable(variant variant.cpp)
target_compile_features(variant PRIVATE cxx_std_17)
target_link_libraries(variant PRIVATE ${LIB_ASAN} CONAN_PKG::gtest)
target_link_libraries(variant PRIVATE wrapper)
target_link_libraries(variant PRIVATE open62541)
add_test(NAME variant_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND variant ${CMAKE_CURRENT_LIST_DIR})

add_executable(variant_isa variant_isa.cpp)
target_compile_features(variant_isa PRIVATE cxx_std_17)
target_link_libraries(variant_isa PRIVATE ${LIB_ASAN} CONAN_PKG::gtest)
target_link_libraries(variant_isa PRIVATE wrapper)
target_link_libraries(variant_isa PRIVATE open62541)
add_test(NAME variant_isa_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND variant_isa ${CMAKE_CURRENT_LIST_DIR})

add_executable(conversion Conversion.cpp)
target_compile_features(conversion PRIVATE cxx_std_17)
target_link_libraries(conversion PRIVATE ${LIB_ASAN} CONAN_PKG::gtest)
target_link_libraries(conversion PRIVATE wrapper)
target_link_libraries(conversion PRIVATE open62541)
add_test(NAME conversion_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND conversion ${CMAKE_CURRENT_LIST_DIR})

add_executable(methods methods.cpp)
target_compile_features(methods PRIVATE cxx_std_17)
target_link_libraries(methods PRIVATE ${LIB_ASAN} CONAN_PKG::gtest)
target_link_libraries(methods PRIVATE wrapper)
target_link_libraries(methods PRIVATE open62541)
add_test(NAME methods_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND methods ${CMAKE_CURRENT_LIST_DIR})