add_subdirectory(import)

add_executable(variant variant.cpp)
target_compile_options(variant PRIVATE ${COMPILER_OPTIONS})
target_compile_features(variant PRIVATE cxx_std_17)
target_link_libraries(variant PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(variant PRIVATE wrapper)
target_link_libraries(variant PRIVATE open62541)
add_test(NAME variant_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND variant ${CMAKE_CURRENT_LIST_DIR})

add_executable(variant_isa variant_isa.cpp)
target_compile_options(variant_isa PRIVATE ${COMPILER_OPTIONS})
target_compile_features(variant_isa PRIVATE cxx_std_17)
target_link_libraries(variant_isa PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(variant_isa PRIVATE wrapper)
target_link_libraries(variant_isa PRIVATE open62541)
add_test(NAME variant_isa_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND variant_isa ${CMAKE_CURRENT_LIST_DIR})

add_executable(conversion Conversion.cpp)
target_compile_options(conversion PRIVATE ${COMPILER_OPTIONS})
target_compile_features(conversion PRIVATE cxx_std_17)
target_link_libraries(conversion PRIVATE ${LIB_ASAN} ${LIB_GCOV}  CONAN_PKG::gtest)
target_link_libraries(conversion PRIVATE wrapper)
target_link_libraries(conversion PRIVATE open62541)
add_test(NAME conversion_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND conversion ${CMAKE_CURRENT_LIST_DIR})

add_executable(methods methods.cpp)
target_compile_options(methods PRIVATE ${COMPILER_OPTIONS})
target_compile_features(methods PRIVATE cxx_std_17)
target_link_libraries(methods PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(methods PRIVATE wrapper)
target_link_libraries(methods PRIVATE open62541)
add_test(NAME methods_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND methods ${CMAKE_CURRENT_LIST_DIR})

add_executable(events events.cpp)
target_compile_options(events PRIVATE ${COMPILER_OPTIONS})
target_compile_features(events PRIVATE cxx_std_17)
target_link_libraries(events PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(events PRIVATE wrapper)
target_link_libraries(events PRIVATE open62541)
add_test(NAME events_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND events ${CMAKE_CURRENT_LIST_DIR})

add_executable(nodeId nodeId.cpp)
target_compile_options(nodeId PRIVATE ${COMPILER_OPTIONS})
target_compile_features(nodeId PRIVATE cxx_std_17)
target_link_libraries(nodeId PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(nodeId PRIVATE wrapper)
target_link_libraries(nodeId PRIVATE open62541)
add_test(NAME nodeId_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND nodeId ${CMAKE_CURRENT_LIST_DIR})

add_executable(object object.cpp)
target_compile_options(object PRIVATE ${COMPILER_OPTIONS})
target_compile_features(object PRIVATE cxx_std_17)
target_link_libraries(object PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(object PRIVATE wrapper)
target_link_libraries(object PRIVATE open62541)
add_test(NAME object_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND object ${CMAKE_CURRENT_LIST_DIR})

add_executable(server server.cpp)
target_compile_options(server PRIVATE ${COMPILER_OPTIONS})
target_compile_features(server PRIVATE cxx_std_17)
target_link_libraries(server PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(server PRIVATE wrapper)
target_link_libraries(server PRIVATE open62541)
add_test(NAME server_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND server ${CMAKE_CURRENT_LIST_DIR})

add_executable(dataSource dataSource.cpp)
target_compile_options(dataSource PRIVATE ${COMPILER_OPTIONS})
target_compile_features(dataSource PRIVATE cxx_std_17)
target_link_libraries(dataSource PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(dataSource PRIVATE wrapper)
target_link_libraries(dataSource PRIVATE open62541)
add_test(NAME dataSource_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND dataSource ${CMAKE_CURRENT_LIST_DIR})