macro(opc_add_test arg)
    add_executable(${arg} ${arg}.cpp)
    target_compile_options(${arg} PRIVATE ${COMPILER_OPTIONS})
    target_compile_features(${arg} PRIVATE cxx_std_17)
    target_link_libraries(${arg} PRIVATE ${LIB_GCOV} CONAN_PKG::gtest)
    target_link_libraries(${arg} PRIVATE modernopc)
    add_test(NAME ${arg}_Test WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND ${arg} ${CMAKE_CURRENT_LIST_DIR})
endmacro()

opc_add_test("variant")
opc_add_test("variant_isa")
opc_add_test("Conversion")
opc_add_test("methods")
opc_add_test("events")
opc_add_test("nodeId")
opc_add_test("object")
opc_add_test("server2")
opc_add_test("dataSource")
opc_add_test("client")
opc_add_test("statusCode")
if(DECODE_JSON)
    opc_add_test("variant_fromJson")
endif()

add_subdirectory(import)
