add_executable(import importTests.cpp)
target_compile_features(import PRIVATE cxx_std_17)
target_link_libraries(import PRIVATE CONAN_PKG::gtest)
target_link_libraries(import PRIVATE wrapper)
target_link_libraries(import PRIVATE open62541)
add_test(NAME importTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND import ${CMAKE_CURRENT_LIST_DIR})

add_executable(importValues importValues.cpp)
target_compile_features(importValues PRIVATE cxx_std_17)
target_link_libraries(importValues PRIVATE CONAN_PKG::gtest)
target_link_libraries(importValues PRIVATE wrapper)
target_link_libraries(importValues PRIVATE open62541)
add_test(NAME importValuesTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importValues ${CMAKE_CURRENT_LIST_DIR})

add_executable(importValueRank importValueRank.cpp)
target_compile_features(importValueRank PRIVATE cxx_std_17)
target_link_libraries(importValueRank PRIVATE CONAN_PKG::gtest)
target_link_libraries(importValueRank PRIVATE wrapper)
target_link_libraries(importValueRank PRIVATE open62541)
add_test(NAME importValueRankTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importValueRank ${CMAKE_CURRENT_LIST_DIR})
