add_executable(import importTests.cpp)
target_compile_options(import PRIVATE ${COMPILER_OPTIONS})
target_compile_features(import PRIVATE cxx_std_17)
target_link_libraries(import PRIVATE ${LIB_ASAN} ${LIB_GCOV} CONAN_PKG::gtest)
target_link_libraries(import PRIVATE wrapper)
target_link_libraries(import PRIVATE open62541)
add_test(NAME importTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND import ${CMAKE_CURRENT_LIST_DIR})

add_executable(importValues importValues.cpp)
target_compile_options(importValues PRIVATE ${COMPILER_OPTIONS})
target_compile_features(importValues PRIVATE cxx_std_17)
target_link_libraries(importValues PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importValues PRIVATE wrapper)
target_link_libraries(importValues PRIVATE open62541)
add_test(NAME importValuesTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importValues ${CMAKE_CURRENT_LIST_DIR})

add_executable(importValueRank importValueRank.cpp)
target_compile_features(importValueRank PRIVATE cxx_std_17)
target_link_libraries(importValueRank PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importValueRank PRIVATE wrapper)
target_link_libraries(importValueRank PRIVATE open62541)
add_test(NAME importValueRankTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importValueRank ${CMAKE_CURRENT_LIST_DIR})

add_executable(importAttributes importAttributes.cpp)
target_compile_options(importAttributes PRIVATE ${COMPILER_OPTIONS})
target_compile_features(importAttributes PRIVATE cxx_std_17)
target_link_libraries(importAttributes PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importAttributes PRIVATE wrapper)
target_link_libraries(importAttributes PRIVATE open62541)
add_test(NAME importAttributesTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importAttributes ${CMAKE_CURRENT_LIST_DIR})

add_executable(importReferences importReferences.cpp)
target_compile_options(importReferences PRIVATE ${COMPILER_OPTIONS})
target_compile_features(importReferences PRIVATE cxx_std_17)
target_link_libraries(importReferences  PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importReferences  PRIVATE wrapper)
target_link_libraries(importReferences  PRIVATE open62541)
add_test(NAME importReferencesTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importReferences ${CMAKE_CURRENT_LIST_DIR})

add_executable(importExtensions importExtensions.cpp)
target_compile_options(importExtensions PRIVATE ${COMPILER_OPTIONS})
target_compile_features(importExtensions PRIVATE cxx_std_17)
target_link_libraries(importExtensions  PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importExtensions  PRIVATE wrapper)
target_link_libraries(importExtensions  PRIVATE open62541)
add_test(NAME importExtensionsTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importExtensions ${CMAKE_CURRENT_LIST_DIR})

add_executable(importConversion importConversion.cpp)
target_compile_options(importConversion PRIVATE ${COMPILER_OPTIONS})
target_compile_features(importConversion PRIVATE cxx_std_17)
target_link_libraries(importConversion  PRIVATE ${LIB_ASAN} ${LIB_GCOV} PRIVATE CONAN_PKG::gtest)
target_link_libraries(importConversion  PRIVATE wrapper)
target_link_libraries(importConversion  PRIVATE open62541)
target_link_libraries(importConversion  PRIVATE xmlImport)
target_include_directories(importConversion PRIVATE ${CMAKE_SOURCE_DIR}/wrapper)
add_test(NAME importConversionTest WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin COMMAND importConversion ${CMAKE_CURRENT_LIST_DIR})