
opc_add_test("import")
opc_add_test("importValues")
opc_add_test("importValueRank")
opc_add_test("importAttributes")
opc_add_test("importReferences")
opc_add_test("importExtensions")
opc_add_test("importConversion")
target_link_libraries(importConversion  PRIVATE xmlImport)
target_include_directories(importConversion PRIVATE ${CMAKE_SOURCE_DIR}/wrapper)